[package]
name = "systemd_socket"
version = "0.1.0"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
description = "A convenience crate for optionally supporting systemd socket activation."
homepage = "https://github.com/Kixunil/systemd_socket"
repository = "https://github.com/Kixunil/systemd_socket"
readme = "README.md"
keywords = ["systmed", "socket-activation"]
categories = ["api-bindings", "config", "os::linux-apis"]
edition = "2018"
license = "MITNFA"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["enable_systemd"]
serde = ["serde_crate", "serde_str_helpers"]
enable_systemd = []

[target.'cfg(all(target_os = "linux", feature = "enable_systemd"))'.dependencies]
libsystemd = "0.2.1"

[dependencies]
thiserror = "1.0.21"
serde_crate = { package = "serde", version = "1.0.116", optional = true, features = ["derive"] }
serde_str_helpers = { version = "0.1.2", optional = true }
parse_arg = { version = "0.1.4", optional = true }
lazy_static = "1.4.0"
tokio_0_2 = { package = "tokio", version = "0.2", optional = true, features = ["tcp", "dns"] }
tokio_0_3 = { package = "tokio", version = "0.3", optional = true, features = ["net"] }
async-std = { version = "1.7.0", optional = true }
