[package]
name = "systemd_socket"
version = "0.1.1"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
description = "A convenience crate for optionally supporting systemd socket activation."
homepage = "https://github.com/Kixunil/systemd_socket"
repository = "https://github.com/Kixunil/systemd_socket"
readme = "README.md"
keywords = ["systmed", "socket-activation"]
categories = ["api-bindings", "config", "os::linux-apis"]
edition = "2018"
license = "MITNFA"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["enable_systemd"]
serde = ["serde_crate", "serde_str_helpers"]
enable_systemd = ["libsystemd"]

[target.'cfg(target_os = "linux")'.dependencies]
# WARNING: It is NOT guaranteed that this crate will always use libsystemd as dependency!
#          This as a feature is not considered a public interface!
libsystemd = { version = ">= 0.3.0, < 0.8.0", optional = true }

[dependencies]
thiserror = "1.0.21"
serde_crate = { package = "serde", version = "1.0.116", optional = true, features = ["derive"] }
serde_str_helpers = { version = "0.1.2", optional = true }
parse_arg = { version = "0.1.4", optional = true }
lazy_static = "1.4.0"
tokio = { package = "tokio", version = "1.0.0", optional = true, features = ["net"] }
tokio_0_2 = { package = "tokio", version = "0.2", optional = true, features = ["tcp", "dns"] }
tokio_0_3 = { package = "tokio", version = "0.3", optional = true, features = ["net"] }
async-std = { version = "1.7.0", optional = true }
